// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-A 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-A 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-A 3`] = `
{
  "eastPos": {
    "vx": 0.006785153385930798,
    "vz": 0.01327067502824387,
    "x": 0.7570838332336409,
    "z": 0.09486838677400054,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0.0018139852799999997,
    "x": -0.8346913868198363,
    "z": 0.019953838079999998,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-A 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 48.3,
      "eastTachiaiBonus": 0,
      "intensity": "even",
      "margin": 0.12284236686269168,
      "speedRating": 50,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 48.1,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 0.03262804935436836,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 1.2336707305686536,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 0.10613883482241454,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.3,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": -0.7882616594816618,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.324,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.36,
      "engagementAngle": 0.02400000000000002,
      "family": "push",
      "forceDiff": -0.38577137783381565,
      "lateralOffsetDiff": -0.02400000000000002,
      "tick": 0,
      "westLateral": 0.2592,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.36,
      "engagementAngle": 0.1008,
      "family": "push",
      "forceDiff": 1.6207043145842612,
      "lateralOffsetDiff": 0.1008,
      "tick": 0,
      "westLateral": 0.19439999999999996,
    },
    "phase": "engagement",
  },
  "clinch_to_belt",
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.00025172771857740205,
      "eastFatigue": 3.5,
      "eastGripClass": "shitate",
      "eastLateral": 0.36,
      "eastTorque": 24.470725899146345,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -0.13984873254300112,
      "westAngularAuthority": 0.00027969746508600224,
      "westDepth": "standard",
      "westFacingAngle": 0,
      "westFatigue": 3.5,
      "westGripClass": "outside",
      "westLateral": 0.13996799999999998,
      "westTorque": 24.610574631689346,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.0004770743722478902,
      "eastFatigue": 4,
      "eastGripClass": "shitate",
      "eastLateral": 0.3196347760077556,
      "eastTorque": 24.353266414830443,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -0.13917745862679354,
      "westAngularAuthority": 0.0002783549172535871,
      "westDepth": "standard",
      "westFacingAngle": 0,
      "westFatigue": 4,
      "westGripClass": "outside",
      "westLateral": 0.09797759999999998,
      "westTorque": 24.492443873457237,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.0006785335556534731,
      "eastFatigue": 4.5,
      "eastGripClass": "shitate",
      "eastLateral": 0.25391287679329966,
      "eastTorque": 24.221758776190363,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -0.13842590035020663,
      "westAngularAuthority": 0.00027685180070041325,
      "westDepth": "standard",
      "westFacingAngle": 0,
      "westFatigue": 4.5,
      "westGripClass": "outside",
      "westLateral": 0.06718463999999999,
      "westTorque": 24.36018467654057,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.0008583518209947114,
      "eastFatigue": 5,
      "eastGripClass": "shitate",
      "eastLateral": 0.18956513145805595,
      "eastTorque": 24.07642822353322,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -0.1375953449481031,
      "westAngularAuthority": 0.0002751906898962062,
      "westDepth": "standard",
      "westFacingAngle": 0,
      "westFatigue": 5,
      "westGripClass": "outside",
      "westLateral": 0.045349631999999994,
      "westTorque": 24.214023568481323,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.0010185536271038386,
      "eastFatigue": 5.5,
      "eastGripClass": "shitate",
      "eastLateral": 0.13599618624292778,
      "eastTorque": 23.9175237972579,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -0.1366872156714436,
      "westAngularAuthority": 0.0002733744313428872,
      "westDepth": "standard",
      "westFacingAngle": 0,
      "westFatigue": 5.5,
      "westGripClass": "outside",
      "westLateral": 0.030233087999999995,
      "westTorque": 24.054211012929343,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.0011609637862869634,
      "eastFatigue": 6,
      "eastGripClass": "shitate",
      "eastLateral": 0.09486838677400054,
      "eastTorque": 23.745317625917643,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -0.13570306771861596,
      "westAngularAuthority": 0.00027140613543723193,
      "westDepth": "standard",
      "westFacingAngle": 0,
      "westFatigue": 6,
      "westGripClass": "outside",
      "westLateral": 0.019953838079999998,
      "westTorque": 23.88102069363626,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-B 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-B 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-B 3`] = `
{
  "eastPos": {
    "vx": 0.15134253123919375,
    "vz": 0.009486471167999997,
    "x": 0.9258752209926884,
    "z": 0.07371498700799999,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "push_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "west",
  "tick": 0,
  "westPos": {
    "vx": 0.15134253123919375,
    "vz": 0,
    "x": -0.7846776928035837,
    "z": 0,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-B 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 51,
      "eastTachiaiBonus": 0,
      "intensity": "even",
      "margin": 0.3396785596032714,
      "speedRating": 50,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "west",
      "westArchetype": "all_rounder",
      "westPower": 51.3,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.3,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": -0.6245639553749638,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.36,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 0.6167052393257348,
      "lateralOffsetDiff": 0.3,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.324,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 0.3140594931446373,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.2592,
      "engagementAngle": 0.324,
      "family": "speed",
      "forceDiff": -0.598129872891931,
      "lateralOffsetDiff": 0.324,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.36,
      "engagementAngle": 0.2592,
      "family": "push",
      "forceDiff": -0.7982922421137548,
      "lateralOffsetDiff": 0.2592,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.36,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": -0.04055933763127406,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.33799679999999993,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 0.35055315566542244,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.27599615999999993,
      "engagementAngle": 0.33799679999999993,
      "family": "speed",
      "forceDiff": 0.9805924384838782,
      "lateralOffsetDiff": 0.33799679999999993,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.20951654399999994,
      "engagementAngle": 0.27599615999999993,
      "family": "push",
      "forceDiff": -1.4493025764342937,
      "lateralOffsetDiff": 0.27599615999999993,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.15206123519999995,
      "engagementAngle": 0.20951654399999994,
      "family": "push",
      "forceDiff": -0.18678282171187954,
      "lateralOffsetDiff": 0.20951654399999994,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.10704752639999997,
      "engagementAngle": 0.15206123519999995,
      "family": "push",
      "forceDiff": 0.11337770631481547,
      "lateralOffsetDiff": 0.15206123519999995,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.07371498700799999,
      "engagementAngle": 0.10704752639999997,
      "family": "push",
      "forceDiff": -1.5134253123919374,
      "lateralOffsetDiff": 0.10704752639999997,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-C 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-C 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-C 3`] = `
{
  "eastPos": {
    "vx": 0.28788172695159947,
    "vz": 0.006852833279999996,
    "x": 1.5892524884450185,
    "z": 0.05791315967999999,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "push_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "west",
  "tick": 0,
  "westPos": {
    "vx": 0.28788172695159947,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > balanced-50s / battle-C 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 51.3,
      "eastTachiaiBonus": 0,
      "intensity": "even",
      "margin": 2.051893366540817,
      "speedRating": 50,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "west",
      "westArchetype": "all_rounder",
      "westPower": 53.4,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": -1.2858151503277548,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.3,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": -1.567493129562423,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.36,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": -2.2361331901438932,
      "lateralOffsetDiff": 0.3,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.36,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": -1.1819163783517321,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.36,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": -2.7778894197337882,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.36,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": -1.207915877328438,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.304128,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": -2.026852167999276,
      "lateralOffsetDiff": 0.36,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0.2353536,
      "engagementAngle": 0.304128,
      "family": "speed",
      "forceDiff": -1.5003577872769762,
      "lateralOffsetDiff": 0.304128,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.17293824,
      "engagementAngle": 0.2353536,
      "family": "push",
      "forceDiff": -1.6445082813905572,
      "lateralOffsetDiff": 0.2353536,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.12279859199999998,
      "engagementAngle": 0.17293824,
      "family": "push",
      "forceDiff": -1.9321184696645193,
      "lateralOffsetDiff": 0.17293824,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.08510054399999999,
      "engagementAngle": 0.12279859199999998,
      "family": "push",
      "forceDiff": -2.1298287778010128,
      "lateralOffsetDiff": 0.12279859199999998,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0.05791315967999999,
      "engagementAngle": 0.08510054399999999,
      "family": "push",
      "forceDiff": -2.8788172695159946,
      "lateralOffsetDiff": 0.08510054399999999,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-A 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-A 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  {
    "kimarite": "kimedashi",
    "winner": "east",
  },
  null,
  null,
  null,
  null,
  null,
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-A 3`] = `
{
  "eastPos": {
    "vx": 0.6377330386254414,
    "vz": -0.014659632536523309,
    "x": 2.016807249366101,
    "z": -0.02691425470988993,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0.015250913279999992,
    "x": -3.4082488378975087,
    "z": 0.10424816639999995,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-A 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 69.3,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 11.622842366862685,
      "speedRating": 55,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 57.6,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 11.523428049354361,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 12.71527073056864,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 11.578538834822401,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 10.674938340518324,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.068228622166178,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 13.065504314584254,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  "clinch_to_belt",
  {
    "clock": 0,
    "data": {
      "eastDepthFrom": "standard",
      "eastDepthTo": "standard",
      "type": "depth_change",
      "westDepthFrom": "standard",
      "westDepthTo": "deep",
    },
    "phase": "grip_transition",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.015353688438475111,
      "eastFatigue": 3.5,
      "eastGripClass": "shitate",
      "eastLateral": -0.001105465567570208,
      "eastTorque": 39.15316143863416,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -8.52982691026395,
      "westAngularAuthority": 0.0170596538205279,
      "westDepth": "deep",
      "westFacingAngle": 0,
      "westFatigue": 3.5,
      "westGripClass": "outside",
      "westLateral": 0.36,
      "westTorque": 47.68298834889811,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "eastDepthFrom": "standard",
      "eastDepthTo": "standard",
      "type": "depth_change",
      "westDepthFrom": "deep",
      "westDepthTo": "maemitsu",
    },
    "phase": "grip_transition",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.037364510135889865,
      "eastFatigue": 4,
      "eastGripClass": "shitate",
      "eastLateral": -0.00401680341086832,
      "eastTorque": 38.96522626372871,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -13.081216967367922,
      "westAngularAuthority": 0.026162433934735847,
      "westDepth": "maemitsu",
      "westFacingAngle": 0,
      "westFatigue": 4,
      "westGripClass": "outside",
      "westLateral": 0.33367679999999994,
      "westTorque": 52.04644323109663,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.05704710023464032,
      "eastFatigue": 4.5,
      "eastGripClass": "shitate",
      "eastLateral": -0.008529587705610811,
      "eastTorque": 38.75481404190458,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -13.010578395744133,
      "westAngularAuthority": 0.026021156791488267,
      "westDepth": "maemitsu",
      "westFacingAngle": 0,
      "westFatigue": 4.5,
      "westGripClass": "outside",
      "westLateral": 0.2708121599999999,
      "westTorque": 51.765392437648714,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.07462091707684168,
      "eastFatigue": 5,
      "eastGripClass": "shitate",
      "eastLateral": -0.014162162048352977,
      "eastTorque": 38.52228515765315,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -12.932514925369667,
      "westAngularAuthority": 0.025865029850739334,
      "westDepth": "maemitsu",
      "westFacingAngle": 0,
      "westFatigue": 5,
      "westGripClass": "outside",
      "westLateral": 0.20485094399999992,
      "westTorque": 51.45480008302282,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.09028371395750953,
      "eastFatigue": 5.5,
      "eastGripClass": "shitate",
      "eastLateral": -0.020424370288944366,
      "eastTorque": 38.26803807561264,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -12.84716032686223,
      "westAngularAuthority": 0.02569432065372446,
      "westDepth": "maemitsu",
      "westFacingAngle": 0,
      "westFatigue": 5.5,
      "westGripClass": "outside",
      "westLateral": 0.14832875519999994,
      "westTorque": 51.11519840247487,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastAngularAuthority": 0,
      "eastDepth": "standard",
      "eastFacingAngle": -0.10421373195227447,
      "eastFatigue": 6,
      "eastGripClass": "shitate",
      "eastLateral": -0.02691425470988993,
      "eastTorque": 37.992508201468226,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": -12.754660772508828,
      "westAngularAuthority": 0.025509321545017657,
      "westDepth": "maemitsu",
      "westFacingAngle": 0,
      "westFatigue": 6,
      "westGripClass": "outside",
      "westLateral": 0.10424816639999995,
      "westTorque": 50.747168973977054,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-B 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-B 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "tsukiotoshi",
    "winner": "east",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-B 3`] = `
{
  "eastPos": {
    "vx": -0.9876174687608057,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "push_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": -0.9876174687608057,
    "vz": 0.009486471167999997,
    "x": -5.963738071810894,
    "z": 0.07371498700799999,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-B 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 72,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 11.160321440396729,
      "speedRating": 55,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 60.8,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 10.866236044625037,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 12.098305239325736,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.78645949314463,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.324,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.324,
      "family": "speed",
      "forceDiff": 10.86507012710807,
      "lateralOffsetDiff": -0.324,
      "tick": 0,
      "westLateral": 0.2592,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.2592,
      "family": "push",
      "forceDiff": 10.655707757886239,
      "lateralOffsetDiff": -0.2592,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.404240662368727,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.786153155665417,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.33799679999999993,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.33799679999999993,
      "family": "speed",
      "forceDiff": 12.406992438483886,
      "lateralOffsetDiff": -0.33799679999999993,
      "tick": 0,
      "westLateral": 0.27599615999999993,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.27599615999999993,
      "family": "push",
      "forceDiff": 9.9678974235657,
      "lateralOffsetDiff": -0.27599615999999993,
      "tick": 0,
      "westLateral": 0.20951654399999994,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.20951654399999994,
      "family": "push",
      "forceDiff": 11.221217178288114,
      "lateralOffsetDiff": -0.20951654399999994,
      "tick": 0,
      "westLateral": 0.15206123519999995,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.15206123519999995,
      "family": "push",
      "forceDiff": 11.51217770631481,
      "lateralOffsetDiff": -0.15206123519999995,
      "tick": 0,
      "westLateral": 0.10704752639999997,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.10704752639999997,
      "family": "push",
      "forceDiff": 9.876174687608057,
      "lateralOffsetDiff": -0.10704752639999997,
      "tick": 0,
      "westLateral": 0.07371498700799999,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-C 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-C 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "tsukiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "tsukiotoshi",
    "winner": "east",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-C 3`] = `
{
  "eastPos": {
    "vx": -0.8510782730484,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "push_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": -0.8510782730484,
    "vz": 0.005038847999999999,
    "x": -5.605857903152588,
    "z": 0.045349631999999994,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > oshi-vs-yotsu / battle-C 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 72.3,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 9.448106633459183,
      "speedRating": 55,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 62.9,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 10.204984849672238,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 9.914106870437577,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 9.236266809856115,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 10.281283621648269,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 8.676110580266213,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 10.236884122671563,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.324,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.324,
      "family": "speed",
      "forceDiff": 9.408747832000717,
      "lateralOffsetDiff": -0.324,
      "tick": 0,
      "westLateral": 0.2592,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.2592,
      "family": "push",
      "forceDiff": 9.926042212723024,
      "lateralOffsetDiff": -0.2592,
      "tick": 0,
      "westLateral": 0.19439999999999996,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.19439999999999996,
      "family": "push",
      "forceDiff": 9.772691718609437,
      "lateralOffsetDiff": -0.19439999999999996,
      "tick": 0,
      "westLateral": 0.13996799999999998,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.13996799999999998,
      "family": "push",
      "forceDiff": 9.475881530335482,
      "lateralOffsetDiff": -0.13996799999999998,
      "tick": 0,
      "westLateral": 0.09797759999999998,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.09797759999999998,
      "family": "push",
      "forceDiff": 9.268971222198989,
      "lateralOffsetDiff": -0.09797759999999998,
      "tick": 0,
      "westLateral": 0.06718463999999999,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.06718463999999999,
      "family": "push",
      "forceDiff": 8.510782730484,
      "lateralOffsetDiff": -0.06718463999999999,
      "tick": 0,
      "westLateral": 0.045349631999999994,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-A 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-A 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  {
    "kimarite": "yorikiri",
    "winner": "east",
  },
  {
    "kimarite": "shitatedashinage",
    "winner": "east",
  },
  {
    "kimarite": "shitatenage",
    "winner": "east",
  },
  {
    "kimarite": "sototasukizori",
    "winner": "east",
  },
  {
    "kimarite": "ketaguri",
    "winner": "east",
  },
  {
    "kimarite": "kekaeshi",
    "winner": "east",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-A 3`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": -1.2690995224193735,
    "vz": -0.014505255294843006,
    "x": -6.2135945104130625,
    "z": 0.049000021234371,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-A 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 62.3,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 12.122842366862692,
      "speedRating": 60,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 50.1,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 12.02302804935437,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 13.214470730568657,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 12.077338834822418,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.173338340518335,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.566228622166182,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 13.56310431458426,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  "clinch_to_belt",
  {
    "clock": 0,
    "data": {
      "eastDepthFrom": "standard",
      "eastDepthTo": "standard",
      "type": "depth_change",
      "westDepthFrom": "standard",
      "westDepthTo": "deep",
    },
    "phase": "grip_transition",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastAngularAuthority": 0.05,
      "eastDepth": "standard",
      "eastFacingAngle": 0,
      "eastFatigue": 3.5,
      "eastGripClass": "shitate",
      "eastLateral": 0,
      "eastTorque": 44.04730661846342,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": 25.53731374966096,
      "westAngularAuthority": 0,
      "westDepth": "deep",
      "westFacingAngle": -0.045000000000000005,
      "westFatigue": 3.5,
      "westGripClass": "outside",
      "westLateral": 0.36,
      "westTorque": 18.509992868802463,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "eastDepthFrom": "standard",
      "eastDepthTo": "standard",
      "type": "depth_change",
      "westDepthFrom": "deep",
      "westDepthTo": "maemitsu",
    },
    "phase": "grip_transition",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastAngularAuthority": 0.048300966844378054,
      "eastDepth": "standard",
      "eastFacingAngle": 0,
      "eastFatigue": 4,
      "eastGripClass": "shitate",
      "eastLateral": 0,
      "eastTorque": 43.8358795466948,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": 24.150483422189026,
      "westAngularAuthority": 0,
      "westDepth": "maemitsu",
      "westFacingAngle": -0.08397087015994024,
      "westFatigue": 4,
      "westGripClass": "outside",
      "westLateral": 0.32568689734848427,
      "westTorque": 19.685396124505772,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastAngularAuthority": 0.048990965288946614,
      "eastDepth": "standard",
      "eastFacingAngle": 0,
      "eastFatigue": 4.5,
      "eastGripClass": "shitate",
      "eastLateral": 0,
      "eastTorque": 43.599165797142646,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": 24.495482644473306,
      "westAngularAuthority": 0,
      "westDepth": "maemitsu",
      "westFacingAngle": -0.11966565190399817,
      "westFatigue": 4.5,
      "westGripClass": "outside",
      "westLateral": 0.2526083498810932,
      "westTorque": 19.10368315266934,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastAngularAuthority": 0.0496329273754364,
      "eastDepth": "standard",
      "eastFacingAngle": 0,
      "eastFatigue": 5,
      "eastGripClass": "shitate",
      "eastLateral": 0,
      "eastTorque": 43.33757080235979,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": 24.816463687718198,
      "westAngularAuthority": 0,
      "westDepth": "maemitsu",
      "westFacingAngle": -0.1523687213514911,
      "westFatigue": 5,
      "westGripClass": "outside",
      "westLateral": 0.17491218887455015,
      "westTorque": 18.521107114641595,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastAngularAuthority": 0.05,
      "eastDepth": "standard",
      "eastFacingAngle": 0,
      "eastFatigue": 5.5,
      "eastGripClass": "shitate",
      "eastLateral": 0,
      "eastTorque": 43.05154283506421,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": 25.112303409546094,
      "westAngularAuthority": 0,
      "westDepth": "maemitsu",
      "westFacingAngle": -0.18213184921634198,
      "westFatigue": 5.5,
      "westGripClass": "outside",
      "westLateral": 0.10584212754869002,
      "westTorque": 17.939239425518117,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastAngularAuthority": 0.05,
      "eastDepth": "standard",
      "eastFacingAngle": 0,
      "eastFatigue": 6,
      "eastGripClass": "shitate",
      "eastLateral": 0,
      "eastTorque": 42.741571726651756,
      "family": "belt",
      "tick": 0,
      "torqueAdvantage": 25.38199044838747,
      "westAngularAuthority": 0,
      "westDepth": "maemitsu",
      "westFacingAngle": -0.20891866429470782,
      "westFatigue": 6,
      "westGripClass": "outside",
      "westLateral": 0.049000021234371,
      "westTorque": 17.359581278264287,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-B 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-B 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "tsukiotoshi",
    "winner": "east",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-B 3`] = `
{
  "eastPos": {
    "vx": -1.0371374687608055,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "push_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": -1.0371374687608055,
    "vz": 0.014525319167999996,
    "x": -5.906892201861295,
    "z": 0.10062019583999997,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-B 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 65,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 11.660321440396729,
      "speedRating": 60,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 53.3,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 11.365836044625038,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 12.597505239325738,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 12.28525949314464,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.324,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.324,
      "family": "speed",
      "forceDiff": 11.363470127108073,
      "lateralOffsetDiff": -0.324,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.15370775788625,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 11.901840662368732,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 12.283353155665417,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 12.90379243848388,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.32807808,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.32807808,
      "family": "speed",
      "forceDiff": 10.464297423565716,
      "lateralOffsetDiff": -0.32807808,
      "tick": 0,
      "westLateral": 0.264093696,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.264093696,
      "family": "push",
      "forceDiff": 11.717217178288124,
      "lateralOffsetDiff": -0.264093696,
      "tick": 0,
      "westLateral": 0.19880432639999998,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.19880432639999998,
      "family": "push",
      "forceDiff": 12.007777706314814,
      "lateralOffsetDiff": -0.19880432639999998,
      "tick": 0,
      "westLateral": 0.14349146111999997,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.14349146111999997,
      "family": "push",
      "forceDiff": 10.371374687608053,
      "lateralOffsetDiff": -0.14349146111999997,
      "tick": 0,
      "westLateral": 0.10062019583999997,
    },
    "phase": "engagement",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-C 1`] = `"push_battle"`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-C 2`] = `
[
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "hatakikomi",
    "winner": "east",
  },
  {
    "kimarite": "hikiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "tsukiotoshi",
    "winner": "east",
  },
  {
    "kimarite": "tsukiotoshi",
    "winner": "east",
  },
]
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-C 3`] = `
{
  "eastPos": {
    "vx": -0.9005982730483997,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "push_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": -0.9005982730483997,
    "vz": 0.02387294208,
    "x": -5.1776863726942235,
    "z": 0.14214776832,
  },
}
`;

exports[`battle ticks — golden master (belt or push per tachiai outcome) > power-vs-speed / battle-C 4`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 65.3,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 9.948106633459183,
      "speedRating": 60,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 55.4,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 10.704584849672239,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0,
      "family": "push",
      "forceDiff": 10.413306870437578,
      "lateralOffsetDiff": 0,
      "tick": 0,
      "westLateral": 0.3,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.3,
      "family": "push",
      "forceDiff": 9.735066809856104,
      "lateralOffsetDiff": -0.3,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 10.779683621648273,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 9.174110580266218,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 10.734484122671555,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 9.905947832000724,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 10.422842212723024,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.36,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.36,
      "family": "speed",
      "forceDiff": 10.269091718609452,
      "lateralOffsetDiff": -0.36,
      "tick": 0,
      "westLateral": 0.32652287999999996,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "west",
      "eastLateral": 0,
      "engagementAngle": 0.32652287999999996,
      "family": "speed",
      "forceDiff": 9.971881530335477,
      "lateralOffsetDiff": -0.32652287999999996,
      "tick": 0,
      "westLateral": 0.26222745599999997,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.26222745599999997,
      "family": "push",
      "forceDiff": 9.764571222198985,
      "lateralOffsetDiff": -0.26222745599999997,
      "tick": 0,
      "westLateral": 0.19712471039999999,
    },
    "phase": "engagement",
  },
  {
    "clock": 0,
    "data": {
      "attackerSide": "east",
      "eastLateral": 0,
      "engagementAngle": 0.19712471039999999,
      "family": "push",
      "forceDiff": 9.005982730483996,
      "lateralOffsetDiff": -0.19712471039999999,
      "tick": 0,
      "westLateral": 0.14214776832,
    },
    "phase": "engagement",
  },
]
`;

exports[`resolveTachiaiV2 — golden master > balanced-50s / tachiai-A 1`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`resolveTachiaiV2 — golden master > balanced-50s / tachiai-A 2`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 48.2,
      "eastTachiaiBonus": 0,
      "intensity": "even",
      "margin": 1.7259534740766327,
      "speedRating": 50,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 46.5,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
]
`;

exports[`resolveTachiaiV2 — golden master > balanced-50s / tachiai-B 1`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`resolveTachiaiV2 — golden master > balanced-50s / tachiai-B 2`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 52.5,
      "eastTachiaiBonus": 0,
      "intensity": "even",
      "margin": 5.515758865910897,
      "speedRating": 50,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 46.9,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
]
`;

exports[`resolveTachiaiV2 — golden master > oshi-vs-yotsu / tachiai-A 1`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`resolveTachiaiV2 — golden master > oshi-vs-yotsu / tachiai-A 2`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 69.2,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 13.225953474076633,
      "speedRating": 55,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 56,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
]
`;

exports[`resolveTachiaiV2 — golden master > oshi-vs-yotsu / tachiai-B 1`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`resolveTachiaiV2 — golden master > oshi-vs-yotsu / tachiai-B 2`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 73.5,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 17.015758865910897,
      "speedRating": 55,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 56.4,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
]
`;

exports[`resolveTachiaiV2 — golden master > power-vs-speed / tachiai-A 1`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`resolveTachiaiV2 — golden master > power-vs-speed / tachiai-A 2`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 62.2,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 13.725953474076633,
      "speedRating": 60,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 48.5,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
]
`;

exports[`resolveTachiaiV2 — golden master > power-vs-speed / tachiai-B 1`] = `
{
  "eastPos": {
    "vx": 0,
    "vz": 0,
    "x": 0.7,
    "z": 0,
  },
  "grapple": {
    "east": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
    "gripAdvantage": "neutral",
    "west": {
      "depth": "standard",
      "leftHand": "outside",
      "rightHand": "outside",
    },
  },
  "inBoutInjury": null,
  "momentumScore": 0,
  "phaseTag": "belt_battle",
  "prevDominantSide": null,
  "tachiaiWinner": "east",
  "tick": 0,
  "westPos": {
    "vx": 0,
    "vz": 0,
    "x": -0.7,
    "z": 0,
  },
}
`;

exports[`resolveTachiaiV2 — golden master > power-vs-speed / tachiai-B 2`] = `
[
  {
    "clock": 0,
    "data": {
      "contactPoint": "chest",
      "eastArchetype": "all_rounder",
      "eastPower": 66.5,
      "eastTachiaiBonus": 0,
      "intensity": "clear",
      "margin": 17.515758865910897,
      "speedRating": 60,
      "tachiaiType": "chest_clash",
      "tachiaiWinner": "east",
      "westArchetype": "all_rounder",
      "westPower": 48.9,
      "westTachiaiBonus": 0,
    },
    "phase": "tachiai",
  },
]
`;
